force-app/main/default/objects/Hotel_Room__c/fields/Assigned_Housekeeper__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Housekeeper__c</fullName>
    <label>Assigned Housekeeper</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Rooms</relationshipLabel>
    <relationshipName>AssignedRooms</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>