force-app/main/default/objects/Hotel_Room__c/fields/Bed_Type__c.field-meta.xml
<CustomField>
    <fullName>Bed_Type__c</fullName><label>Bed Type</label>
    <type>Text</type><length>50</length>
<unique>false</unique><externalId>false</externalId>
</CustomField>