force-app/main/default/objects/Hotel_Room__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName><label>Category</label>
    <type>Text</type><length>100</length>
<unique>false</unique><externalId>false</externalId>
</CustomField>