force-app/main/default/objects/Hotel_Room__c/fields/Current_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Current_Reservation__c</fullName>
    <label>Current Reservation</label>
    <type>Lookup</type>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Rooms (Current)</relationshipLabel>
    <relationshipName>CurrentRooms</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>