force-app/main/default/objects/Hotel_Room__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>