force-app/main/default/objects/Hotel_Room__c/fields/Full_Description__c.field-meta.xml
<CustomField>
    <fullName>Full_Description__c</fullName><label>Full Description</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines>
</CustomField>