force-app/main/default/objects/Hotel_Room__c/fields/Housekeeping_Status__c.field-meta.xml
<CustomField>
    <fullName>Housekeeping_Status__c</fullName>
    <label>Housekeeping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Clean</fullName><default>true</default><label>Clean</label></value>
            <value><fullName>Dirty</fullName><default>false</default><label>Dirty</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Inspecting</fullName><default>false</default><label>Inspecting</label></value>
            <value><fullName>Maintenance</fullName><default>false</default><label>Maintenance</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>