force-app/main/default/objects/Hotel_Room__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName><label>Is Active</label>
    <type>Checkbox</type><defaultValue>true</defaultValue>
</CustomField>