force-app/main/default/objects/Hotel_Room__c/fields/Is_Featured__c.field-meta.xml
<CustomField>
    <fullName>Is_Featured__c</fullName><label>Is Featured</label>
    <type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>