force-app/main/default/objects/Hotel_Room__c/fields/Last_Cleaned__c.field-meta.xml
<CustomField>
    <fullName>Last_Cleaned__c</fullName>
    <label>Last Cleaned</label>
    <type>DateTime</type>
</CustomField>