force-app/main/default/objects/Hotel_Room__c/fields/Max_Guests__c.field-meta.xml
<CustomField>
    <fullName>Max_Guests__c</fullName><label>Max Guests</label>
    <type>Number</type><precision>2</precision><scale>0</scale>
<unique>false</unique><externalId>false</externalId>
</CustomField>