force-app/main/default/objects/Hotel_Room__c/fields/Price_Per_Night__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Night__c</fullName><label>Price Per Night</label>
    <type>Currency</type><precision>8</precision><scale>2</scale>
</CustomField>