force-app/main/default/objects/Hotel_Room__c/fields/Primary_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Primary_Image_URL__c</fullName><label>Primary Image URL</label>
    <type>Text</type><length>255</length>
<unique>false</unique><externalId>false</externalId>
    <description>Full public URL to the room hero image. Stored in Salesforce Files or an external CDN. See Image Storage section in README.</description>
</CustomField>