force-app/main/default/objects/Hotel_Room__c/fields/Room_Status__c.field-meta.xml
<CustomField>
    <fullName>Room_Status__c</fullName>
    <label>Room Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Available</fullName><default>true</default><label>Available</label></value>
            <value><fullName>Occupied</fullName><default>false</default><label>Occupied</label></value>
            <value><fullName>Blocked</fullName><default>false</default><label>Blocked</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>