force-app/main/default/objects/Hotel_Room__c/fields/Square_Meters__c.field-meta.xml
<CustomField>
    <fullName>Square_Meters__c</fullName><label>Square Meters</label>
    <type>Number</type><precision>5</precision><scale>0</scale>
<unique>false</unique><externalId>false</externalId>
</CustomField>