force-app/main/default/objects/Hotel_Room__c/fields/Tagline__c.field-meta.xml
<CustomField>
    <fullName>Tagline__c</fullName><label>Tagline</label>
    <type>Text</type><length>255</length>
<unique>false</unique><externalId>false</externalId>
</CustomField>