force-app/main/default/objects/Hotel_Room__c/fields/View_Type__c.field-meta.xml
<CustomField>
    <fullName>View_Type__c</fullName><label>View Type</label>
    <type>Text</type><length>80</length>
<unique>false</unique><externalId>false</externalId>
</CustomField>